# open-morphic

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
.claude/: settings.json
.claude/agents/: context-engineer.md  cost-guardian.md  engine-tester.md  fractal-analyst.md  harness-optimizer.md  laee-auditor.md  local-safety-gate.md  memory-archaeologist.md  morphic-pr-reviewer.md  spec-writer.md  tool-scout.md  ucl-orchestrator.md
.claude/rules/: clean-architecture.md  laee-safety.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan.md  spec.md  tasks.md
api/: __init__.py
application/: __init__.py
application/dto/: __init__.py
application/use_cases/: __init__.py  analyze_execution.py  background_planner.py  cost_estimator.py  create_task.py  discover_tools.py  evolve_prompts.py  execute_task.py  extract_insights.py  handoff_task.py  (+8 more)
benchmarks/: __init__.py  context_continuity.py  dedup_accuracy.py  runner.py
core/: __init__.py  config.py  database.py
docs/: AGENT_CLI.md  ARCHITECTURE.md  CHANGELOG.md  CODING_RULES.md  COMPETITIVE_ANALYSIS.md  CONTEXT_ENGINEERING.md  CONTINUATION.md  ENV_VARS.md  FIX_PLAN.md  FIX_URGENT.md  FRACTAL_ENGINE_PLAN.md  IMPLEMENTATION_PLAN.md  LAEE.md  NEXT_DESIGN.md  PHASES.md  REFERENCES.md  SEMANTIC_MEMORY.md  TECH_DECISIONS.md  TECH_STACK.md  UCL.md  UI_DESIGN.md  VISION.md
domain/: __init__.py
infrastructure/: __init__.py
interface/: __init__.py
migrations/: env.py
scripts/: init_pg.sql  smoke_test.sh  validate_env.py
shared/: __init__.py  config.py  event_bus.py  logging.py
specs/: README.md
ui/: Dockerfile  bun.lockb  components.json  next.config.ts  package-lock.json  package.json
(+526 files in other folders)
