[project]
name = "morphic-agent"
version = "0.4.0-alpha"
description = "Self-Evolving AI Agent Framework — Mission Control for Intelligence"
requires-python = ">=3.12"
readme = "CLAUDE.md"
license = {text = "MIT"}

dependencies = [
    # Agent Framework
    "langgraph>=0.3",
    "litellm>=1.50",
    "instructor>=1.7",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pgvector>=0.3",
    "alembic>=1.14",
    "neo4j>=5.25",
    # Memory
    "mem0ai>=0.1",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.7",
    "httpx>=0.28",
    # Task Queue
    "celery[redis]>=5.4",
    # LAEE - Local Autonomous Execution Engine (v0.4)
    "playwright>=1.49",
    "watchdog>=6.0",
    "apscheduler>=3.10",
    "psutil>=6.1",
    # CLI
    "typer>=0.15",
    "rich>=13.9",
    # Semantic Memory
    "numpy>=1.26",
    # MCP - Model Context Protocol
    "mcp[cli]>=1.25,<2",
    # Utilities
    "python-dotenv>=1.0",
    "orjson>=3.10",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
morphic = "interface.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["domain", "application", "infrastructure", "interface", "shared"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["UP042"]  # Keep (str, Enum) pattern for Pydantic strict=True compatibility

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
